<resources>
    <string name="app_name" translatable="false">LazzyBee</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="add_course">Add course</string>
    <string name="action_search">Search</string>
    <string name="not_found">Not found</string>
    <string name="review">Review</string>
    <string-array name="custom_study">
        
        <item>@string/setting_my_level</item>
        <item>@string/setting_lines</item>
        <item>@string/setting_total_learn_per_day</item>
        <item>@string/setting_lines</item>
        <item>@string/setting_today_new_card_limit</item>
        
        <item>@string/setting_lines</item>
        <item>@string/setting_display_meaning</item>
        
        <item>@string/setting_lines</item>
        <item>@string/setting_auto_play_sound</item>
        <item>@string/setting_lines</item>
        <item>@string/setting_time_deday_show_answer</item>
        <item>@string/setting_lines</item>
        <item>@string/setting_reset_to_default</item>
    </string-array>
    <string name="result">Result</string>
    <string name="title_activity_study">Study</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_review_card">Incoming</string>
    <string name="title_activity_setting" translatable="false">Settings</string>
    <string name="title_activity_add_course">Add Course</string>
    <string name="hint_search">Search card</string>
    <string name="title_activity_card_details">Card Details</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="EASE_AGAIN">Again</string>
    <string name="EASE_HARD">Hard</string>
    <string name="EASE_GOOD">Normal</string>
    <string name="EASE_EASY">Easy</string>
    <string name="learn_more">Learn more</string>
    <string name="congratulations">You have reached daily goal. Have fun!</string>
    <string name="action_learnt">Card learned</string>
    <string name="action_ignore">Ignore card</string>
    <string name="show_answer">Show Answer</string>
    <string name="study">Study</string>
    <string name="due_today">Due today:</string>
    <string name="total_new_learn">Total new:</string>
    <string name="total_cards">Total cards:</string>
    <string name="example">Example</string>
    <string name="explain">Explain</string>
    <string name="meaning">Meaning</string>
    <string name="dialog_title_learn_more">Lean more</string>
    <string name="dialog_message_learn_more">Do you really want to learn more?</string>
    <string name="ok">@android:string/ok</string>
    <string name="cancel">Cancel</string>
    <string name="learned">Learned</string>
    <string name="done_card">Done</string>
    <string name="new_card">New</string>
    <string name="action_add_to_learn">Add to learn</string>
    <string name="dialog_message_add_to_learn">Do you want to add this card <b>%s</b> to learn?</string>
    <string name="dialog_title_add_to_learn">Add card to learn</string>
    <string name="notification">Notification</string>
    <string name="language" translatable="false">Language/Ngôn ngữ</string>
    <string name="queue" translatable="false">queue</string>
    <string name="dialog_title_delete_card">Delete card</string>
    <string name="dialog_message_delete_card">Are you sure to delete card: {%s}!</string>
    <string name="message_learnt_card_sucessful">Card changes to learned</string>
    <string name="change_language">Change language</string>
    <string name="lang_english" translatable="false">English/Tiếng anh</string>
    <string name="lang_viet" translatable="false">Vietnamse/Tiếng việt</string>
    <string name="dialog_message_restart_app">Your app is going to restart now</string>
    <string name="dialog_title_restart_app">Restart App</string>
    <string name="API_KEY" translatable="false">AIzaSyBUUO5SWQV0KBIUHxiLmvrxDMHJcB6W5EI</string>
    <string name="SERVER_CLIENT_ID" translatable="false">269585672935-csg1ub9uk4r7rbbiua7o63e5cmq1qg8r.apps.googleusercontent.com</string>
    <string name="SERVER_WIDGET_URL" translatable="false">http://localhost</string>
    <string name="fb_app_id" translatable="false">386540048195283</string>
    <string name="action_check_update_database">Check update</string>
    <string name="dialog_update">Update</string>
    <string name="dialog_title_update">Do you want to update?</string>
    <string name="btn_update">Update</string>
    <string name="updated">Updated</string>
    <string name="auto_check_update">Auto check update</string>
    <string name="debug_infor">Debug Information</string>
    <string name="setting_learn_title">Learn</string>
    <string name="setting_today_new_card_limit">Max new card per day</string>
    <string name="setting_today_review_card_limit">Max review card per day</string>
    <string name="setting_max_learn_more_per_day">Max learn more per day</string>
    <string name="setting_total_learn_per_day">Total card per day</string>
    <string name="setting_about" translatable="false">-About</string>
    <string name="setting_update_title">Database</string>
    <string name="setting_notification">Notification</string>
    <string name="setting_check_update">Check update</string>
    <string name="setting_auto_check_update">Auto check update</string>
    <string name="setting_debug_info">Debug Infor</string>
    <string name="setting_language" translatable="false">Language/Ngôn ngữ</string>
    <string name="setting_lines" translatable="false">LINE</string>
    <string name="setting_lines_child" translatable="false">LINE CHILD</string>
    <string name="setting_limit_card_number">{%d} Card</string>
    <string name="dialog_message_setting_today_new_card_limit_by">Today\'s new card limit by</string>
    <string name="dialog_message_setting_today_review_card_limit_by">Today review card limit by</string>
    <string name="dialog_message_setting_total_card_learn_pre_day_by">Total card learn per day by</string>
    <string name="dialog_message_setting_max_learn_more_per_day_by">Max learn more per day by</string>
    <string name="message_you_not_complete">You haven\'t completed yet! Touch to learn</string>
    <string name="message_total_card_review">Total card review:</string>
    <string name="my_course">My Course</string>
    <string name="message_congratulations_with_tip" formatted="false">Click %1s to learn more and click %2s to view learned cards</string>
    <string name="message_congratulations_continue">Click {%s} to study</string>
    <string name="message_congratulations" translatable="false">congratulations</string>
    <string name="drawer_user" translatable="false">user</string>
    <string name="drawer_title_course" translatable="false">title_course</string>
    <string name="drawer_add_course" translatable="false">add_course</string>
    <string name="drawer_line" translatable="false">lines</string>
    <string name="drawer_setting">Settings</string>
    <string name="setting_about_message" translatable="false">Born2Go © 2018</string>
    <string name="under_construction" translatable="false">Under construction</string>
    <string name="notification_title">%1$s %2$s</string>
    <string name="message_hellp_study">Tip/help panel(under construction)</string>
    <string name="setting_speech_rate">Speaking speed</string>
    <string name="setting_speech_rate_slider" translatable="false">SpeechSlider</string>
    <string name="action_change_speech_rate">Speech rate</string>
    <string name="speech_rate_very_slow">Very Slow</string>
    <string name="speech_rate_slow">Slow</string>
    <string name="speech_rate_normal">Normal</string>
    <string name="speech_rate_fast">Fast</string>
    <string name="speech_rate_very_fast">Very Fast</string>
    <string name="dialog_title_change_speech_rate">Change speech rate</string>
    <string name="speech_rate_very_slow_value" translatable="false">0.7</string>
    <string name="speech_rate_slow_value" translatable="false">0.9</string>
    <string name="speech_rate_normal_value" translatable="false">1.0</string>
    <string name="speech_rate_fast_value" translatable="false">1.1</string>
    <string name="speech_rate_very_fast_value" translatable="false">1.3</string>
    <string name="update_database_sucsessfuly" translatable="false">Update database sucsessfully</string>
    <string name="setting_all_right" translatable="false">@string/setting_about_message</string>
    <string name="setting_reset_cache">Reset Cache</string>
    <string name="dialog_title_clear_cache_and_restart_app" translatable="false">Clear cache and restart app</string>
    <string name="message_action_add_card_to_learn_complete">Add card %s to learn</string>
    <string name="tracking_ID" translatable="false">UA-67194143-2</string>
    <string name="google_tag_ID" translatable="false">GTM-KJQJGX</string>
    <string name="gtag_container_load_error" translatable="false">Failed to load container</string>
    <string name="notification_message" translatable="false">It\'s time to learn a few English words!</string>
    <string name="local_service_started" translatable="false">no</string>
    <string name="setting_reset_to_default">Reset to default</string>
    <string name="dialog_title_reset_custom_study">Reset to default custom study</string>
    <string name="dialog_message_reset_custom_study">You are reset to default custom study?</string>
    <string name="setting_export_database" translatable="false">Export database</string>
    <string name="dialog_title_export_database" translatable="false">Export database</string>
    <string name="url_lazzybee_website" translatable="false">http://www.lazzybee.com</string>
    <string name="action_update_card">Update word</string>
    <string name="action_back_before_card" translatable="false">Back before card</string>
    <string name="action_not_favorite" translatable="false">No favorite</string>
    <string name="action_share">Share</string>
    <string name="drawer_dictionary">Dictionary</string>
    <string name="action_goto_dictionary">Dictionary</string>
    <string name="drawer_subject">Major</string>
    <string name="subject_it">IT</string>
    <string name="subject_economy">Economy</string>
    <string name="subject_science">Science</string>
    <string name="subject_medical">Medicine</string>
    <string name="drawer_help">Help</string>
    <string name="subject_ielts" translatable="false">Ielts</string>
    <string name="drawer_statistical">Learning progress</string>
    <string name="dialog_title_statistics">Learning progress</string>
    <string name="drawer_home">Home</string>
    <string name="subject_600toeic" translatable="false">600 toeic</string>
    <string name="drawer_test_your_voca">Test your vocabulary</string>
    <string name="hello" translatable="false">XIN CHÀO CÁC BẠN</string>
    <string name="choose_vn" translatable="false">Chọn ngôn ngữ hiển thị</string>
    <string name="choose_en" translatable="false">Choose display language</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="zero" translatable="false">0</string>
    <string name="description" translatable="false">Description</string>
    <string name="question" translatable="false">Question</string>
    <string name="answer" translatable="false">answer</string>
    <string name="level" translatable="false">Level</string>
    <string name="learn" translatable="false">Learn</string>
    <string name="pronoun" translatable="false">pronoun</string>
</resources>