<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.born2go.lazzybee.activity.CardDetailsActivity">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_white"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="withText|ifRoom" />
    <item
        android:id="@+id/action_add_to_learn"
        android:orderInCategory="100"
        android:title="@string/action_add_to_learn"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_update"
        android:title="@string/action_update_card"
        app:showAsAction="never" />
</menu>
