<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="12dp"
            android:text="@string/app_name"
            android:textColor="#000"
            android:textSize="22sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:src="@drawable/ic_logo180"
            android:contentDescription="TODO" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/hello"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="12dp"
            android:text="@string/choose_vn"
            android:textColor="#6e6a6a"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="12dp"
            android:text="@string/choose_en"
            android:textColor="#a19c9c"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TableRow>

                <Button
                    android:id="@+id/btnEn"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/ic_eng_flag"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/btnVn"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/ic_vn_flag" />
            </TableRow>
        </TableLayout>

    </LinearLayout>



</FrameLayout>