<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_gravity="left|top"
        android:background="@color/color_title_dialog_statitsic"
        tools:ignore="RtlHardcoded">

        <ImageView
            android:id="@+id/mClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="14dp"
            android:layout_marginLeft="14dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_clear_white_36dp"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_horizontal|top"
            android:text="@string/dialog_title_statistics"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/mStatistic"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        android:paddingRight="16dp"
        android:paddingBottom="8dp">

        <RelativeLayout
            android:id="@+id/mChart"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical">

            <lecho.lib.hellocharts.view.ColumnChartView
                android:id="@+id/chart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white" />

        </RelativeLayout>


        <include
            android:id="@+id/mCount"
            layout="@layout/count_streak"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/btnShared"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimary"
            android:text="@string/action_share"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/mlazzybee"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:text="@string/url_lazzybee_website"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

</LinearLayout>
