<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <android.support.v7.widget.CardView
        android:id="@+id/mCardView"
        android:layout_width="fill_parent"
        android:layout_height="56dp"
        android:visibility="visible">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp">

            <TextView
                android:id="@+id/lbSettingName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notification"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/grey_600"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                tools:ignore="RelativeOverlap" />

            <Switch
                android:id="@+id/mSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/lbSettingName"
                android:layout_alignParentEnd="false"
                android:layout_alignParentRight="true"
                android:visibility="gone"
                android:textColor="@color/grey_300" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/zero"
                android:id="@+id/lbLimit"
                android:textColor="@color/colorPrimary"
                android:layout_marginRight="16dp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/lbDescription"
                android:textColor="@color/grey_300"
                android:text="@string/description"
                android:layout_below="@+id/lbSettingName"
                android:layout_alignParentStart="false"
                android:layout_marginLeft="1dp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>